<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".Fragments.StoryFragment">


    <RelativeLayout
        android:id="@+id/my_status_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8.51dp"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/ic_launcher"
            />

        <com.devlomi.circularstatusview.CircularStatusView
            android:id="@+id/circular_status_view"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            app:portion_color="@color/Yellow"
            app:portion_spacing="4dp"
            app:portion_width="4dp"
            />

        <TextView
            android:id="@+id/myStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/profile_image"
            android:padding="5dp"
            android:text="My Story"
            android:textColor="@color/Blue"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="13dp"
            android:background="@drawable/ic_baseline_delete_24" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_status_box"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:padding="10dp">

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/stories"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/Yellow"
        android:layout_marginTop="1dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:src="@drawable/ic_picture" />


</RelativeLayout>

