<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MessageActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/bar_layout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Yellow"
            android:theme="@style/MenuStyle">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/Yellow"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/profile_image"
                android:layout_toRightOf="@+id/profile_image"
                android:background="@color/Yellow"
                android:text="username"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/HomeButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/Yellow"
                android:src="@drawable/ic_baseline_home_24" />

            <ImageButton
                android:id="@+id/calls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:backgroundTint="@color/Yellow"
                app:srcCompat="@drawable/calls" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="626dp"
        android:layout_width="match_parent"
        android:id="@+id/recycler_view12"
        android:focusable="true"
        android:layout_below="@id/bar_layout"
        android:layout_above="@id/Bottom"/>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/Bottom"
        android:layout_alignParentBottom="true"
        android:padding="5dp">

        <EditText
            android:id="@+id/text_send"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:hint="Type a message..."
            android:inputType="textMultiLine"
            android:paddingHorizontal="10dp"
            android:text=""
            android:textColor="#070707"
            android:textColorHint="#7E7A7A"
            android:textColorLink="#121111" />

        <ImageButton
            android:background="@drawable/send"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:id="@+id/btn_send"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <ImageButton
        android:background="@drawable/ic_picture"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:id="@+id/btn_attach_pic"
        android:clickable="true"
        android:layout_toLeftOf="@id/btn_send"/>

</RelativeLayout>


</RelativeLayout>