<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">

    <item
        android:id="@+id/contacts"
        android:title="Contacts"
        android:icon="@drawable/contacts"/>



    <item
        android:id="@+id/calls"
        android:title="Calls"
        android:icon="@drawable/calls"/>

    <item
        android:id="@+id/camera"
        android:title="Camera"
        android:icon="@drawable/camera"/>


    <item
        android:id="@+id/chats"
        android:title="Chats"
        android:icon="@drawable/chats"/>

    <item
        android:id="@+id/settings"
        android:title="Settings"
        android:icon="@drawable/settings"/>
</menu>